fix z-index of top nav dropdown

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -360,6 +360,7 @@ body.dark .home .text {
     max-width: fit-content;
     left: auto !important;
     right: 0;
+    z-index: 1021;
 }
 
 // breadcrumb
